test/testData/parser/negative/expressions/unassignableArgs.err
test/testData/parser/negative/expressions/unassignableArgs.c:15:7: warning: incompatible integer to pointer conversion passing to '*signed int' from type 'signed int'
test/testData/parser/negative/expressions/unassignableArgs.c:15:10: warning: incompatible integer to pointer conversion passing to '*signed int' from type 'signed int'
test/testData/parser/negative/expressions/unassignableArgs.c:16:7: error: passing to '*signed int' from incompatible type 'float'
test/testData/parser/negative/expressions/unassignableArgs.c:17:11: error: passing to '*signed int' from incompatible type 'float'
test/testData/parser/negative/expressions/unassignableArgs.c:19:7: warning: incompatible pointer type passing to '*signed int' from type '*float'
test/testData/parser/negative/expressions/unassignableArgs.c:19:11: warning: incompatible pointer type passing to '*signed int' from type '*float'
test/testData/parser/negative/expressions/unassignableArgs.c:20:7: error: passing to '*signed int' from incompatible type 'STRUCT S1'
test/testData/parser/negative/expressions/unassignableArgs.c:21:11: error: passing to '*signed int' from incompatible type 'STRUCT S1'
test/testData/parser/negative/expressions/unassignableArgs.c:22:11: error: passing to '*signed int' from incompatible type 'STRUCT S2'
test/testData/parser/negative/expressions/unassignableArgs.c:23:7: warning: incompatible pointer type passing to '*signed int' from type '*STRUCT S1'
test/testData/parser/negative/expressions/unassignableArgs.c:23:12: warning: incompatible pointer type passing to '*signed int' from type '*STRUCT S1'
test/testData/parser/negative/expressions/unassignableArgs.c:24:7: warning: incompatible pointer type passing to '*signed int' from type '*STRUCT S2'
test/testData/parser/negative/expressions/unassignableArgs.c:24:12: warning: incompatible pointer type passing to '*signed int' from type '*STRUCT S2'
test/testData/parser/negative/expressions/unassignableArgs.c:27:7: error: passing to 'STRUCT S1' from incompatible type 'float'
test/testData/parser/negative/expressions/unassignableArgs.c:28:7: error: passing to 'STRUCT S1' from incompatible type 'signed int'
test/testData/parser/negative/expressions/unassignableArgs.c:29:7: error: passing to 'STRUCT S1' from incompatible type '*signed int'
test/testData/parser/negative/expressions/unassignableArgs.c:30:7: error: passing to 'STRUCT S1' from incompatible type '*float'
test/testData/parser/negative/expressions/unassignableArgs.c:31:11: error: passing to 'STRUCT S2' from incompatible type 'STRUCT S1'
test/testData/parser/negative/expressions/unassignableArgs.c:32:7: error: passing to 'STRUCT S1' from incompatible type 'STRUCT S2'
test/testData/parser/negative/expressions/unassignableArgs.c:33:7: error: passing to 'STRUCT S1' from incompatible type 'STRUCT S2'
test/testData/parser/negative/expressions/unassignableArgs.c:34:7: error: passing to 'STRUCT S1' from incompatible type '*STRUCT S1'
test/testData/parser/negative/expressions/unassignableArgs.c:35:7: error: passing to 'STRUCT S1' from incompatible type '*STRUCT S1'
test/testData/parser/negative/expressions/unassignableArgs.c:36:7: error: passing to 'STRUCT S1' from incompatible type '*STRUCT S2'
test/testData/parser/negative/expressions/unassignableArgs.c:37:7: error: passing to 'STRUCT S1' from incompatible type 'C *{signed int (*signed int, *signed int)}'
test/testData/parser/negative/expressions/unassignableArgs.c:39:7: error: passing to 'STRUCT S1' from incompatible type 'signed int[20]'
